[package]
name = "proxy-wasm-demo"
version = "0.1.0"
authors = ["Anton Weiss <anton@otomato.io>"]
edition = "2018"

[lib]
name = "myenvoyfilter"
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
proxy-wasm = "0.1.4" # The Rust SDK for proxy-wasm
itertools = "0.10.2"
sha1 = "0.10.1"
anyhow = "1.0.62"
redis = "0.21.5"